--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_API_BASE_URL=https://shortlinks-830p.onrender.com
-VITE_REDIRECT_URL=http://localhost:5000
+VITE_REDIRECT_URL=https://shortlinks-830p.onrender.com
